Allow Ember Addons page title to be clicked on mobile by fixing z-index issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -41,6 +41,8 @@ a span.name-prefix {
 }
 
 .branding {
+  position: relative;
+  z-index: 1;
   color: white;
   font-weight: 100;
   margin:0;
